# cyberpunk_language_processing

./: .gitignore  README.md  cleancsv.py  cluster_speakers.py  cp2077_extractor.py  generate_transcripts.py  pyproject.toml
cyberpunk2077-language-processing/: config.py  main.py
cyberpunk2077-language-processing/app/extraction/: conversion.py  extract.py  main.py  offsets.py  setup.py  signatures.py
cyberpunk2077-language-processing/app/utility/: directory_tools.py
transcription/: __init__.py  config.py  data_handling.py  main.py  output.py  transcriber.py
