[project]
name = "cyberpunk-2077-archive-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cuda-python>=12.8.0",
    "huggingface-hub>=0.30.2",
    "librosa>=0.11.0",
    "nemo-toolkit[all,asr]>=2.2.1",
    "pandas>=2.2.3",
    "pyannote-audio>=3.3.2",
    "pydantic-settings>=2.8.1",
    "scikit-learn>=1.6.1",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "tqdm>=4.67.1",
]
